crates/toml/tests/snapshots/invalid/string/bad-byte-escape.stderr
TOML parse error at line 1, column 13
  |
1 | naughty = "\xAg"
  |             ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
